feat(android): package the bindings as an AAR and test them on a device (#629)
* feat(android): package the bindings as an AAR and test them on a device

Two android-only failure modes shipped in a row: #628, a compile error in
`jni/src` that only the NDK sees, and #621, a `java.lang.ref.Cleaner` that
exists on the JDK and not on android's class library. Both were found by
OpenDocument.droid, because it was the only thing that ever cross compiled
this, and the build_test matrix's single android entry only ever configured
conan for one ABI — it never built the bindings, let alone ran them.

`android/` closes that: a gradle library module that packages the JNI
bindings as `app.opendocument:odr-core-android`, and `.github/workflows/
android.yml`, which on every push cross compiles all four ABIs, lints
`../jni/java` against minSdk 26, assembles the AAR, and runs an instrumented
suite on API 26 (the floor OpenDocument.droid ships to) and on API 36.

The AAR carries `classes.jar` (the same `../jni/java` the maven jar is built
from, plus `OdrAndroid`), `libodr_jni.so` and `libc++_shared.so` per ABI, the
renderer's CSS/JS and the libmagic database as assets, and a consumer proguard
rule keeping the classes JNI resolves by name. `OdrAndroid.init(context)`
unpacks the assets into no-backup storage, keyed by `Odr.commitHash()`, and
registers them with `GlobalParams` — an APK holds them as assets, and the
renderer wants files.

`build_native.py` drives conan + cmake per ABI into `native/prebuilt`, where
the gradle build reads them; CI runs it once per ABI as a separate job and
hands the results to the AAR and emulator jobs as artifacts.

This is a second packaging of the same build, not a new path: OpenDocument.droid
keeps consuming the conan package (`with_jni=True`), which needs no credentials,
as f-droid requires. The AAR is for consumers that just want a dependency.

Along the way:

* The four `android-<arch>` conan profiles replace `android-35-x86_64` and
  share one `andr